Enum Quality {
    bad
    middle
    good
}

Enum Status {
    done
    in_progress
    waiting
}

Enum Difficulty {
    easy
    midlle 
    hard
}

Table Students {
    id uuid [pk]
    name varchar
    created_at timestamp
}

Table Courses {
    id uuid [pk]
    name varchar
    description text
    created_at timestamp
    updated_at timestamp
}

Table StudentsCourses {
    student_id uuid [ref: > Students.id]
    course_id uuid [ref: > Courses.id]
    enrolled_at timestamp
}

Table Topics {
    id uuid [pk]
    course_id uuid [ref: > Courses.id]
    name varchar
    created_at timestamp
}

Table Problems {
    id uuid [pk]
    topic_id uuid [ref: > Topics.id]
    name varchar
    source str
    difficulty Difficulty
    description text
    solution text
    answer varchar
    created_at timestamp
}

Table Task {
    id uuid [pk]
    student_id uuid [ref: > Students.id]
    problem_id uuid [ref: > Problems.id]
    created_at timestamp
    deadline timestamp
    status Status
    updated_at timestamp
}

Table TopicMastery {
    id uuid [pk]
    student_id uuid [ref: > Students.id]
    topic_id uuid [ref: > Topics.id]
    quality Quality
    description text
    created_at timestamp
    updated_at timestamp
}